fix(components): Histogram handles not visible on IE11
Fix #479

--- a/packages/styles/src/inputs/inputs.scss
+++ b/packages/styles/src/inputs/inputs.scss
@@ -22,7 +22,7 @@
   }
 
   &:hover {
-    box-shadow: inset 0 0 0 1px var(--as--color--complementary,);
+    box-shadow: inset 0 0 0 1px var(--as--color--complementary);
   }
 
   &:focus,
